--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,24 @@ body, html {
     width: 100%;
     height: 100%;
 }
+
+.main-menu {
+    position: absolute;
+    left: 8%;
+    top: 40px;
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+.main-menu li{
+    display: inline-block;
+    padding-right: 10px;
+    list-style: none;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    color: rgb(255, 255, 255);
+    line-height: 1.4;
+}
