--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,98 @@ body, html {
 .main-menu li{
     display: inline-block;
     padding-right: 10px;
-    list-style: none;
-    color: #fff;
+    list-style: none;    
     font-family: sans-serif;
     font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    color: rgb(255, 255, 255);
+    line-height: 1.4;
+    transition: transform .3s ease;  
+}
+
+.main-menu li:hover {
+    transform: scale(1.1);
+}
+
+
+.main-menu li a {
+    text-decoration: none;
+    color: #fff;
+    letter-spacing: 1px;   
+}
+
+
+.name {
+    position: absolute;
+    color: #fff;
+    left: 8%;
+    top: 39%;
+    font-family: sans-serif;
+    font-size: 29px;
     font-family: 'Poppins', sans-serif;
     color: rgb(255, 255, 255);
     line-height: 1.4;
+}
+
+.name span {
+    /* //font-family: 'Roboto', sans-serif !important; */
+    font-size: 24px;
+}
+
+.lab {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    max-width: 400px;
+    height: 100%;
+    right: 10%;
+    top: 50%;
+    z-index: 10;
+    transform: translateY(-50%);
+    overflow-y: scroll;
+    overflow: -moz-scrollbars-none;
+    padding: 0;
+    transition: opacity 0.6s ease-in-out;
+}
+
+.show {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.lab::-webkit-scrollbar {
+    display: none;
+}
+
+.lab li {
+    overflow: hidden;
+    margin-bottom: 40px;    
+    width: 100%;
+    position: relative;
+}
+
+.lab li:hover .title{
+    top: 20px;
+    transition: top .3s ease;
+}
+
+.lab li img {
+    width: 100%;
+    opacity: 0.5;
+    transition: transform .3s ease;
+}
+
+.lab li img:hover {
+    opacity: 1;
+    transform: scale(1.05);
+}
+
+.lab li .title {
+    position: absolute;
+    top: -20px;
+    left: 20px;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    margin: 0;
 }
